<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UpdateActivity"
    tools:showIn="@layout/activity_update">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ReportTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/report"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="Report:" />

            <AutoCompleteTextView
                android:id="@+id/reportName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/dropdown_menu_for_reports"
                android:dropDownHeight="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/severityTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/severity_of_issue_with_5_as_most_severe"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="@string/severity_of_issue_with_5_as_most_severe" />

            <RadioGroup
                android:id="@+id/severities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/severityTitle">

                <RadioButton
                    android:id="@+id/severity1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/severity_1" />

                <RadioButton
                    android:id="@+id/severity2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/severity_2" />

                <RadioButton
                    android:id="@+id/severity3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/severity_3" />

                <RadioButton
                    android:id="@+id/severity4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/severity_4" />

                <RadioButton
                    android:id="@+id/severity5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/severity_5" />
            </RadioGroup>


            <Button
                android:id="@+id/Send"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/send_update"
                tools:text="Send Report" />

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>